@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Remove socket_info.nconn which gets invalid in some cases.
+Nicolas Weeger 2011-07-24
+
 Add protocol to send quest updates to client.
 Add optional face to quests.
 Nicolas Weeger 2011-07-23
